
- Parser:
-- error message for: "Identifier too long" (Perl limit is 251 characters)
- Java:
-- a "method call without parenthesis" will access a Java class/instance variable: my Int $val = Sample->VAL;

9.015 cpan:Perlito5  2015-12-01
- Docs:
-- cookbook entry "Obtaining a Perl compiler script that runs in the browser"
- Parser:
-- error messages for: Scalar/Array/Number/String found where operator expected
-- improved error message for missing comma
- Javascript:
-- console.log() is the default "print"
-- reverse() bugfix, add tests
- Command line "perlito5"
-- better switch handling: -Cperl5 / -C perl5 / -C'perl5'
-- compile-only switch '-c'
-- multiple '-e' switches
-- '-E' switches
-- show %ENV, @INC in '-V'
-- set $0
-- execute UNITCHECK blocks

9.014 cpan:Perlito5  2015-11-24
- Parser:
-- AUTOLOAD and DESTROY don't need a 'sub' prefix.
-- ${...} and @{...} are "do-block"-ish
-- $x->{s} doesn't try to parse "s///"
-- set ${^GLOBAL_PHASE}
- Javascript:
-- implement '-p' operator in nodejs
- Command line "perlito5"
-- read source code from STDIN or pipe if there is no -e or filename
-- execute CHECK, INIT and END blocks

9.013 cpan:Perlito5  2015-11-07
- no changes; "pause.perl.org" reupload

9.012 cpan:Perlito5  2015-11-06
- Docs:
-- started "Cookbook" section in Perlito5.pm POD
   with instructions to generate perlito5.js

9.011 cpan:Perlito5  2015-11-06
- fix command line option "expand_use"

9.010 cpan:Perlito5  2015-11-06
- fix MANIFEST.SKIP

9.009 cpan:Perlito5  2015-11-05
- Build:
-- add bin/perlito5 to script_files section, add dist_abstract
-- requires perl 5.014 because older versions don't have 'feature.pm',
   which breaks tests
- Parser:
-- update CORE prototypes to Perl v5.22 - use (+) instead of (\\[@%])
- Perl5-to-Javascript compiler:
-- implement (+) prototype

9.008 cpan:Perlito5   2015-11-04
- Makefile - add bin/perlito5 to EXE_FILES section
- add LICENSE.md
- Perl5-to-Javascript compiler: