@@ -1,6 +1,8 @@
 
 - Parser:
 -- error message for: "Identifier too long" (Perl limit is 251 characters)
+- Javascript:
+-- implemented 1-argument bless() - github bug #35
 - Java:
 -- a "method call without parenthesis" will access a Java class/instance variable: my Int $val = Sample->VAL;
 
